kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: homework
  labels:
    app: web-svc
spec:
  clusterIP: 10.105.67.85
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: 8000
  selector:
    app: nginx
  type: ClusterIP
